--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^4.8.2
   firebase_auth: ^4.6.3
   google_sign_in: ^6.1.4
+  color_log: ^0.0.6
 
 dev_dependencies:
   flutter_test:
